--- a/src/main/resources/com/example/bookingsystemuser/bookingFormular.fxml
+++ b/src/main/resources/com/example/bookingsystemuser/bookingFormular.fxml
@@ -27,17 +27,18 @@
                         <Label minHeight="26.0" text="E-mail" />
                         <Label minHeight="26.0" text="Tlf." />
                         <Label minHeight="26.0" text="Organisation" />
+                        <Label minHeight="28.0" text="Forløb" />
                         <Label minHeight="23.0" text="Forplejning" />
                         <Label minHeight="27.0" text="Dato for booking" />
                         <Label minHeight="28.5" text="Tidsrum" />
-                  <Label minHeight="26.0" text="Antal deltagere" />
-                  <Label text="Type af booking" />
+                        <Label minHeight="26.0" text="Antal deltagere" />
+                        <Label text="Type af booking" />
                     </children>
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                 </VBox>
-                <VBox prefHeight="331.0" prefWidth="242.0" spacing="10.0">
+                <VBox prefHeight="364.0" prefWidth="265.0" spacing="10.0">
                     <children>
                   <HBox spacing="4.0">
                      <children>
@@ -48,6 +49,12 @@
                   <TextField fx:id="email" maxWidth="204.0" promptText="Er du lærer, benyt skoletdr@dk" />
                   <TextField fx:id="tlf" maxWidth="204.0" prefWidth="212.0" promptText="12345678" />
                   <TextField fx:id="org" maxWidth="204.0" promptText="Udfyld hvis muligt " />
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="260.0" spacing="2.0">
+                     <children>
+                        <ComboBox fx:id="formål" onAction="#formålValgt" prefWidth="150.0" promptText="Formål.." />
+                        <ComboBox fx:id="forløb" prefWidth="159.0" promptText="Forløb.." visible="false" />
+                     </children>
+                  </HBox>
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                             <children>
                                 <RadioButton fx:id="yesToggle" mnemonicParsing="false" onAction="#forplejningToggle" selected="true" text="Ja">
@@ -66,7 +73,7 @@
                                 <ComboBox fx:id="slutTid" onMousePressed="#opdaterSlutTid" />
                             </children>
                         </HBox>
-                  <Spinner fx:id="antalDeltagere" prefHeight="26.0" prefWidth="66.0" />
+                  <Spinner fx:id="antalDeltagere" editable="true" max="28" min="0" prefHeight="26.0" prefWidth="66.0" />
                   <HBox spacing="10.0">
                      <children>
                         <RadioButton fx:id="midlType" mnemonicParsing="false" onAction="#typeToggle" text="Midlertidigt">
@@ -110,7 +117,7 @@
     <bottom>
         <HBox alignment="CENTER_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Button mnemonicParsing="false" onAction="#anullerBooking" text="Anuller booking" />
+                <Button mnemonicParsing="false" onAction="#anullerBooking" text="Annullér booking" />
                 <Button fx:id="opretBookingKnap" mnemonicParsing="false" onAction="#opretBooking" text="Opret booking" />
             </children>
             <padding>
