--- a/src/main/resources/com/example/bookingsystemuser/weekView.fxml
+++ b/src/main/resources/com/example/bookingsystemuser/weekView.fxml
@@ -14,7 +14,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="1200.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bookingsystemuser.UserController">
    <top>
-      <HBox alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="1200.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER_RIGHT" style="-fx-background-color: rgb(84, 86, 90);"  prefHeight="45.0" prefWidth="1200.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
             <TextField fx:id="bkTekst" promptText="Indtast Bookingkode.." />
             <Button mnemonicParsing="false" onAction="#findBooking" text="Find booking" />
