--- a/src/main/resources/com/example/bookingsystemuser/bookingsoversigt.fxml
+++ b/src/main/resources/com/example/bookingsystemuser/bookingsoversigt.fxml
@@ -64,7 +64,7 @@
       </HBox>
    </center>
    <top>
-      <HBox BorderPane.alignment="CENTER">
+      <HBox BorderPane.alignment="CENTER" style="-fx-background-color: rgb(148, 198, 70);">
          <children>
             <Label text="Bookingsoversigt">
                <font>
