--- a/src/main/resources/com/example/bookingsystemuser/weekView.fxml
+++ b/src/main/resources/com/example/bookingsystemuser/weekView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="1200.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bookingsystemuser.UserController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="1200.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bookingsystemuser.controller.UserController">
    <top>
       <HBox alignment="CENTER_RIGHT" style="-fx-background-color: rgb(84, 86, 90);"  prefHeight="45.0" prefWidth="1200.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
