--- a/src/main/resources/com/example/bookingsystemuser/bookingFormular.fxml
+++ b/src/main/resources/com/example/bookingsystemuser/bookingFormular.fxml
@@ -123,7 +123,7 @@
         </HBox>
     </top>
     <bottom>
-        <HBox alignment="CENTER_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
+        <HBox alignment="CENTER_RIGHT" style="-fx-background-color: rgb(84, 86, 90);" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
                 <Button mnemonicParsing="false" onAction="#anullerBooking" text="Annullér booking" />
                 <Button fx:id="opretBookingKnap" mnemonicParsing="false" onAction="#opretBooking" text="Opret booking" />
