--- a/src/main/resources/com/example/bookingsystemuser/bookingFormular.fxml
+++ b/src/main/resources/com/example/bookingsystemuser/bookingFormular.fxml
@@ -38,7 +38,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                 </VBox>
-                <VBox prefHeight="364.0" prefWidth="265.0" spacing="10.0">
+                <VBox prefHeight="380.0" prefWidth="355.0" spacing="10.0">
                     <children>
                   <HBox spacing="4.0">
                      <children>
@@ -56,8 +56,9 @@
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="260.0" spacing="2.0">
                      <children>
-                        <ComboBox fx:id="formål" onAction="#formålValgt" prefWidth="150.0" promptText="Formål.." />
-                        <ComboBox fx:id="forløb" onAction="#forløbValgt" prefWidth="159.0" promptText="Forløb.." visible="false" />
+                        <ComboBox fx:id="formål" onAction="#formålValgt" prefHeight="30.0" prefWidth="110.0" promptText="Formål.." />
+                        <ComboBox fx:id="forløb" onAction="#forløbValgt" prefWidth="110.0" promptText="Forløb.." visible="false" />
+                        <Hyperlink fx:id="forløbLink" onAction="#åbenForløb" text="Forløb" visible="false" />
                      </children>
                   </HBox>
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
@@ -94,7 +95,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                 </VBox>
-                <VBox prefHeight="254.0" prefWidth="50.0">
+                <VBox minWidth="-Infinity" prefHeight="380.0" prefWidth="4.0">
                <children>
                   <Text fx:id="bemærkning" strokeType="OUTSIDE" strokeWidth="0.0" text="Læg mærke til at hvis du booker lokalet uden for normal åbneningstid, skal det først godkendes*" visible="false" wrappingWidth="127.0">
                      <font>
@@ -123,7 +124,7 @@
         </HBox>
     </top>
     <bottom>
-        <HBox alignment="CENTER_RIGHT" style="-fx-background-color: rgb(84, 86, 90);" spacing="10.0" BorderPane.alignment="CENTER">
+        <HBox alignment="CENTER_RIGHT" spacing="10.0" style="-fx-background-color: rgb(84, 86, 90);" BorderPane.alignment="CENTER">
             <children>
                 <Button mnemonicParsing="false" onAction="#anullerBooking" text="Annullér booking" />
                 <Button fx:id="opretBookingKnap" mnemonicParsing="false" onAction="#opretBooking" text="Opret booking" />
