--- a/src/main/resources/com/example/bookingsystemuser/bookingFormular.fxml
+++ b/src/main/resources/com/example/bookingsystemuser/bookingFormular.fxml
@@ -27,7 +27,7 @@
                         <Label minHeight="26.0" text="E-mail" />
                         <Label minHeight="26.0" text="Tlf." />
                         <Label minHeight="26.0" text="Organisation" />
-                        <Label minHeight="28.0" text="Forløb" />
+                        <Label minHeight="28.0" text="Formål" />
                         <Label minHeight="23.0" text="Forplejning" />
                         <Label minHeight="27.0" text="Dato for booking" />
                         <Label minHeight="28.5" text="Tidsrum" />
@@ -38,7 +38,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                 </VBox>
-                <VBox prefHeight="380.0" prefWidth="355.0" spacing="10.0">
+                <VBox prefHeight="380.0" spacing="10.0">
                     <children>
                   <HBox spacing="4.0">
                      <children>
@@ -48,17 +48,17 @@
                   </HBox>
                   <TextField fx:id="email" maxWidth="204.0" promptText="Er du lærer, benyt @skoletdr.dk" />
                   <TextField fx:id="tlf" maxWidth="204.0" prefWidth="212.0" promptText="12345678" />
-                  <HBox prefHeight="100.0" prefWidth="200.0" spacing="2.0">
+                  <HBox prefHeight="27.0" prefWidth="200.0" spacing="2.0">
                      <children>
-                        <ComboBox fx:id="orgBox" onAction="#orgValgt" prefWidth="150.0" promptText="Vælg.." />
+                        <ComboBox fx:id="orgBox" onAction="#orgValgt" prefHeight="27.0" prefWidth="150.0" promptText="Vælg.." />
                         <TextField fx:id="org" promptText="Virksomhedsnavn..." visible="false" />
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="260.0" spacing="2.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="27.0" spacing="2.0">
                      <children>
-                        <ComboBox fx:id="formål" onAction="#formålValgt" prefHeight="30.0" prefWidth="110.0" promptText="Formål.." />
+                        <ComboBox fx:id="formål" onAction="#formålValgt" prefWidth="110.0" promptText="Formål.." />
                         <ComboBox fx:id="forløb" onAction="#forløbValgt" prefWidth="110.0" promptText="Forløb.." visible="false" />
-                        <Hyperlink fx:id="forløbLink" onAction="#åbenForløb" text="Forløb" visible="false" />
+                        <Hyperlink fx:id="forløbLink" onAction="#åbenForløb" text="Læs om forløb" visible="false" />
                      </children>
                   </HBox>
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
@@ -95,18 +95,23 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                 </VBox>
-                <VBox minWidth="-Infinity" prefHeight="380.0" prefWidth="4.0">
+                <VBox minWidth="-Infinity" prefHeight="380.0" prefWidth="130.0">
                <children>
                   <Text fx:id="bemærkning" strokeType="OUTSIDE" strokeWidth="0.0" text="Læg mærke til at hvis du booker lokalet uden for normal åbneningstid, skal det først godkendes*" visible="false" wrappingWidth="127.0">
                      <font>
                         <Font size="9.0" />
                      </font>
                   </Text>
+                  <Text fx:id="optagetTekst" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Denne tid er dsv optaget. Prøv at vælge en anden dato." visible="false" wrappingWidth="120.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="175.0" />
+                     </VBox.margin>
+                  </Text>
                </children></VBox>
             </children>
-         <padding>
-            <Insets bottom="10.0" />
-         </padding>
         </HBox>
     </center>
     <top>
